--- a/app/feature/Header/style.scss
+++ b/app/feature/Header/style.scss
@@ -1,4 +1,4 @@
-@import './../../mixin.scss';
+@use './../../mixin';
 
 #header {
   width: 100%;
@@ -113,7 +113,7 @@
       }
 
       span {
-        @include card-title;
+        @include mixin.card-title;
         font-weight: bold;
       }
     }
