--- a/app/feature/NewsUpdate/style.scss
+++ b/app/feature/NewsUpdate/style.scss
@@ -1,15 +1,15 @@
-@import './../../mixin.scss';
+@use './../../mixin';
 
 #community {
   h3 {
     background-image: linear-gradient(90deg, #feffbc 0%, #ffc671 153.8%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    @include display-tile;
+    @include mixin.display-tile;
   }
 
   h4 {
-    @include card-title;
+    @include mixin.card-title;
     background-image: linear-gradient(90deg, #feffbc 0%, #ffc671 153.8%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -45,7 +45,7 @@
     }
 
     span {
-      @include card-title;
+      @include mixin.card-title;
       background-image: linear-gradient(90deg, #feffbc 0%, #ffc671 153.8%);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
@@ -122,7 +122,7 @@
     }
 
     h6 {
-      @include card-title;
+      @include mixin.card-title;
       background-image: linear-gradient(90deg, #feffbc 0%, #ffc671 153.8%);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
@@ -133,7 +133,7 @@
       span {
         bottom: 21.5%;
         position: absolute;
-        @include card-title;
+        @include mixin.card-title;
         background-image: linear-gradient(90deg, #feffbc 0%, #ffc671 153.8%);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
