--- a/app/main.scss
+++ b/app/main.scss
@@ -1,8 +1,8 @@
+@use './mixin';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-@import './mixin';
+@import 'https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap';
 
 // ================================ Text ================================
 html {
@@ -26,11 +26,11 @@ body {
 }
 
 .menu {
-  @include nav;
+  @include mixin.nav;
 }
 
 .section-title {
-  @include section-title;
+  @include mixin.section-title;
 }
 
 .container-1640 {
@@ -60,10 +60,11 @@ h2.lineskin {
   gap: 1.125rem;
   background-image: linear-gradient(90deg, #feffbc 0%, #ffc671 153.8%);
   -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
   position: relative;
   margin-bottom: 2.5rem;
-  @include section-title;
+  @include mixin.section-title;
 
   &::after {
     content: '';
@@ -78,7 +79,7 @@ h2.lineskin {
 }
 
 .date {
-  @include date-caption;
+  @include mixin.date-caption;
 }
 
 @media only screen and (max-width: 1980px) {
