--- a/app/index.scss
+++ b/app/index.scss
@@ -7,6 +7,7 @@
     height: auto;
     aspect-ratio: 16/9;
     position: relative;
+
     &::before {
       content: '';
       position: absolute;
@@ -25,6 +26,7 @@
       -webkit-mask-composite: destination-over;
       mask-composite: destination-over;
     }
+
     &::after {
       content: '';
       position: absolute;
@@ -35,7 +37,7 @@
       width: 100%;
       height: 100%;
       flex-shrink: 0;
-      background: url('/2312/animation-bg.gif');
+      // background: url('/2312/animation-bg.gif');
       background-size: cover;
       -webkit-mask-image: url('/2312/mask.png');
       mask-image: url('/2312/mask.png');
@@ -43,6 +45,7 @@
       -webkit-mask-composite: destination-over;
       mask-composite: destination-over;
     }
+
     .content-wrapper {
       height: 100%;
       display: flex;
@@ -51,12 +54,14 @@
       justify-content: end;
       padding-bottom: 5rem;
     }
+
     .logo-text {
       width: 36vw;
       max-width: 690px;
       object-fit: contain;
       margin-bottom: 5rem;
     }
+
     h1 {
       width: 100%;
       max-width: 1450px;
@@ -71,6 +76,7 @@
       letter-spacing: 0.06em;
       position: relative;
       z-index: auto;
+
       &::before {
         content: '';
         position: absolute;
@@ -85,6 +91,7 @@
         z-index: 5;
         aspect-ratio: 1451.71 / 182.37;
       }
+
       &::after {
         content: 'RISE & CONQUER';
         z-index: 10;
@@ -99,6 +106,7 @@
       }
     }
   }
+
   .list-apps {
     display: flex;
     gap: 0.5rem;
@@ -109,9 +117,11 @@
       justify-content: center;
       align-items: center;
       gap: 0.625rem;
+
       .icon {
         position: relative;
         z-index: 20;
+
         &::before {
           content: '';
           width: 100%;
@@ -123,12 +133,14 @@
           z-index: -1;
           filter: blur(25px);
         }
+
         svg {
           width: 3.5rem;
           height: auto;
           aspect-ratio: 1/1;
         }
       }
+
       .icon-name {
         text-transform: uppercase;
         font-family: 'Cinzel', serif;
@@ -139,11 +151,14 @@
       }
     }
   }
+
   .div-translateY {
     transform: translateY(-5rem);
   }
+
   .social {
     left: 140px;
+
     .mediaList {
       width: 130.45px;
     }
@@ -163,23 +178,28 @@
 @media only screen and (max-width: 1440px) {
   .section-banner {
     .container-1920 {
+
       &::before,
       &::after {
         width: 110%;
         height: auto;
         aspect-ratio: 16/9;
       }
+
       .content-wrapper {
         padding-bottom: 0;
       }
+
       h1 {
         font-size: 3rem;
+
         &::before {
           top: 50%;
           transform: translate(-50%, -50%);
         }
       }
     }
+
     .list-apps {
       .app-item {
         .icon {
@@ -197,11 +217,14 @@
     .div-translateY {
       transform: translateY(0);
     }
+
     .container-1920 {
+
       &::before,
       &::after {
         width: 120%;
       }
+
       .logo-text {
         margin-bottom: 0;
       }
@@ -217,17 +240,21 @@
         max-width: unset;
         margin-bottom: -4rem;
       }
+
       h1 {
         margin-bottom: -1.5rem;
       }
+
       &::before,
       &::after {
         width: 140%;
       }
+
       .content-wrapper {
         transform: translateY(3rem);
       }
     }
+
     .social {
       .mediaList {
         svg {
@@ -237,6 +264,7 @@
         }
       }
     }
+
     .div-translateY {
       transform: translateY(3rem);
     }
@@ -250,37 +278,47 @@
         display: none;
       }
     }
+
     .container-1920 {
+
       &::before,
       &::after {
         width: 200%;
       }
+
       .content-wrapper {
         transform: translateY(46%);
       }
+
       .logo-text {
         width: 68vw;
         margin-bottom: -3rem;
       }
+
       h1 {
         margin-bottom: -0.5rem;
         font-size: 6vw;
       }
     }
+
     .list-apps {
       gap: 4vw;
+
       .app-item {
         padding-right: 0;
         padding-left: 0;
         gap: 5px;
+
         .icon {
           svg {
             width: 5vw;
           }
+
           &::before {
             filter: blur(8px);
           }
         }
+
         .icon-name {
           font-size: 2vw;
         }
