--- a/app/index.scss
+++ b/app/index.scss
@@ -37,7 +37,7 @@
       width: 100%;
       height: 100%;
       flex-shrink: 0;
-      // background: url('/2312/animation-bg.gif');
+      background: url('/2312/animation-bg.gif');
       background-size: cover;
       -webkit-mask-image: url('/2312/mask.png');
       mask-image: url('/2312/mask.png');
