--- a/app/feature/Header/style.scss
+++ b/app/feature/Header/style.scss
@@ -242,6 +242,19 @@
 
 @media screen and (max-width: 576px) {
   #header {
+    .side-barr {
+      padding-left: 20px;
+
+      nav {
+        gap: 1.5rem;
+
+        a {
+          font-size: 14px;
+        }
+      }
+
+    }
+
     .header-wrapper {
       height: 78px;
       padding-left: 1rem;
