--- a/app/feature/Header/style.scss
+++ b/app/feature/Header/style.scss
@@ -23,22 +23,27 @@
       align-items: flex-end;
 
       .menu {
+        cursor: pointer;
         text-transform: uppercase;
-        background: linear-gradient(90deg,
-            #ffffff 0%,
-            #f5f0d2 32%,
-            #e9dbbd 71%,
-            #ffffff 100%);
+        background: linear-gradient(
+          90deg,
+          #ffffff 0%,
+          #f5f0d2 32%,
+          #e9dbbd 71%,
+          #ffffff 100%
+        );
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
 
         .text {
           text-transform: uppercase;
-          background: linear-gradient(90deg,
-              #ffffff 0%,
-              #f5f0d2 32%,
-              #e9dbbd 71%,
-              #ffffff 100%);
+          background: linear-gradient(
+            90deg,
+            #ffffff 0%,
+            #f5f0d2 32%,
+            #e9dbbd 71%,
+            #ffffff 100%
+          );
           -webkit-background-clip: text;
           -webkit-text-fill-color: transparent;
         }
@@ -167,8 +172,9 @@
     display: none;
   }
 
-  #header .header-wrapper>nav {
+  #header .header-wrapper > nav {
     display: flex;
+    align-items: center;
   }
 }
 
@@ -181,7 +187,7 @@
     .div-toggle-menu {
       order: 0;
 
-      >button {
+      > button {
         padding: 0;
         width: 50px;
         height: auto;
@@ -212,7 +218,7 @@
   }
 
   #header .header-wrapper {
-    >nav {
+    > nav {
       display: none;
     }
 
@@ -232,7 +238,7 @@
   }
 }
 
-@media screen and (max-width:1024px) {
+@media screen and (max-width: 1024px) {
   #header {
     .button-action-header {
       font-size: 18px;
@@ -252,7 +258,6 @@
           font-size: 14px;
         }
       }
-
     }
 
     .header-wrapper {
@@ -274,7 +279,7 @@
     }
 
     .div-toggle-menu {
-      >button {
+      > button {
         width: 27px;
       }
     }
