--- a/app/feature/Header/style.scss
+++ b/app/feature/Header/style.scss
@@ -9,7 +9,9 @@
   background: rgba(255, 255, 255, 0.1);
   border-bottom: 0.5px solid #ffffff;
   backdrop-filter: blur(5px);
-
+  * {
+    transition: all 0.3s ease-in-out;
+  }
   .header-wrapper {
     display: flex;
     justify-content: space-between;
